--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Alok Jha",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
@@ -18,7 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "openai": "^3.3.0"
   },
   "type": "module"
 }
