--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "rehype-highlight": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
